Colaboratory를 통해 생성됨

--- a/_lab_session_2_numpy_and_pandas_ipynb.ipynb
+++ b/_lab_session_2_numpy_and_pandas_ipynb.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "HNPNzCabLo7S"
       },
@@ -51,13 +51,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wM9StYWNK0Xr",
-        "outputId": "31cc918d-e756-4f0f-9e5c-53f9a8f112ce"
+        "outputId": "fbca98f3-1a03-416f-be33-f21fb495b484"
       },
       "outputs": [
         {
@@ -96,13 +96,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wkkW6vazHa-n",
-        "outputId": "9099d6f4-0277-49af-8f8d-f98cf7e18d0a"
+        "outputId": "443cff3f-d58e-4c1e-90d9-a13411e9f5f6"
       },
       "outputs": [
         {
@@ -141,13 +141,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_XmWs6POMFuS",
-        "outputId": "9e2bf1d6-adbc-475a-aada-d4668cd68629"
+        "outputId": "690e262d-54a1-4a59-e06b-e3f4fdc2cfb5"
       },
       "outputs": [
         {
@@ -182,13 +182,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4VryzVtxNniI",
-        "outputId": "44cdb5da-bd96-4725-da58-589af07945e1"
+        "outputId": "28f21625-f30b-4a6f-a4fe-e927937c65fb"
       },
       "outputs": [
         {
@@ -222,20 +222,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0ng7wdvoZpJe",
-        "outputId": "3d705196-1169-42b6-d538-5ce056a56a8b"
+        "outputId": "54675526-dc46-4bf9-f2c4-b3e3bf261dc0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5.8 0.8253012917851409 5.843333333333334\n"
+            "5.843333333333334 5.8 0.8253012917851409\n"
           ]
         }
       ],
@@ -246,7 +246,7 @@
         "sepallength = np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0])\n",
         "\n",
         "# Solution\n",
-        "med, std, avg = ##############################\n",
+        "med, std, avg = np.mean(sepallength), np.median(sepallength), np.std(sepallength)\n",
         "\n",
         "# Print\n",
         "print(med, std, avg)"
